Assert when using transformation manipulators in new 3D View editor #53141

Closed
opened 2017-10-24 00:00:12 +02:00 by Dalai Felinto · 6 comments

Blender Version
Broken: 23a5726ec2

Short description of error
BLI_assert "crash" when creating a new 3D view and using transform manipulators.

Exact steps for others to reproduce the error

  • Default Blender
  • Change any editor to 3d view (e.g., the TimeLine one)
  • Translate the Cube using the transforms widget
BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform.c:2023, saveTransform(), at '((v3d->custom_orientation_index == -1) && (t->custom_orientation == ((void *)0))) || (BKE_workspace_transform_orientation_get_index( CTX_wm_workspace(C), t->custom_orientation) == v3d->custom_orientation_index)'

**Blender Version** Broken: 23a5726ec2 **Short description of error** BLI_assert "crash" when creating a new 3D view and using transform manipulators. **Exact steps for others to reproduce the error** * Default Blender * Change any editor to 3d view (e.g., the TimeLine one) * Translate the Cube using the transforms widget ``` BLI_assert failed: /home/dfelinto/src/blender/blender/source/blender/editors/transform/transform.c:2023, saveTransform(), at '((v3d->custom_orientation_index == -1) && (t->custom_orientation == ((void *)0))) || (BKE_workspace_transform_orientation_get_index( CTX_wm_workspace(C), t->custom_orientation) == v3d->custom_orientation_index)' ```
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Campbell Barton was assigned by Dalai Felinto 2017-10-24 00:00:43 +02:00
Member

Added subscribers: @ideasman42, @JulianEisel

Added subscribers: @ideasman42, @JulianEisel
Campbell Barton was unassigned by Julian Eisel 2017-10-24 00:04:10 +02:00
Julian Eisel self-assigned this 2017-10-24 00:04:10 +02:00
Member

Think this is an issue from when I moved transform-orientations to workspace. And I actually think I know what's going on.

Think this is an issue from when I moved transform-orientations to workspace. And I actually think I know what's going on.

This issue was referenced by 254daf8f8c

This issue was referenced by 254daf8f8c276a4e5292e5a12fcfa88296131878
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53141
No description provided.